SubBt/force-app/main/default/objects/Listings__c/fields/Additional_Features__c.field-meta.xml
<CustomField>
    <fullName>Additional_Features__c</fullName>
    <label>Additional Features</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>