SubBt/force-app/main/default/objects/Listings__c/fields/Bedrooms__c.field-meta.xml
<CustomField>
    <fullName>Bedrooms__c</fullName>
    <label>Bedrooms</label>
    <length>255</length>
    <type>Text</type>
</CustomField>