SubBt/force-app/main/default/objects/Listings__c/fields/Driveway_Permit__c.field-meta.xml
<CustomField>
    <fullName>Driveway_Permit__c</fullName>
    <label>Driveway Permit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>