SubBt/force-app/main/default/objects/Listings__c/fields/Keybox__c.field-meta.xml
<CustomField>
    <fullName>Keybox__c</fullName>
    <label>Keybox #</label>
    <length>255</length>
    <type>Text</type>
</CustomField>