SubBt/force-app/main/default/objects/Listings__c/fields/Legal_Description__c.field-meta.xml
<CustomField>
    <fullName>Legal_Description__c</fullName>
    <label>Legal Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>