SubBt/force-app/main/default/objects/Listings__c/fields/Listing_Company__c.field-meta.xml
<CustomField>
    <fullName>Listing_Company__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Listing Company</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Listings</relationshipLabel>
    <relationshipName>Listings</relationshipName>
    <type>Lookup</type>
</CustomField>