SubBt/force-app/main/default/objects/Listings__c/fields/Lot_Size_sqft_sqm__c.field-meta.xml
<CustomField>
    <fullName>Lot_Size_sqft_sqm__c</fullName>
    <label>Lot Size (sqft/sqm)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>