SubBt/force-app/main/default/objects/Listings__c/fields/MLS_ID__c.field-meta.xml
<CustomField>
    <fullName>MLS_ID__c</fullName>
    <label>MLS/ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>