SubBt/force-app/main/default/objects/Listings__c/fields/Owner_Terms__c.field-meta.xml
<CustomField>
    <fullName>Owner_Terms__c</fullName>
    <label>Owner Terms</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>