SubBt/force-app/main/default/objects/Listings__c/fields/Parking_Spaces__c.field-meta.xml
<CustomField>
    <fullName>Parking_Spaces__c</fullName>
    <label>Parking Spaces</label>
    <length>255</length>
    <type>Text</type>
</CustomField>