SubBt/force-app/main/default/objects/Listings__c/fields/Projected_Taxes__c.field-meta.xml
<CustomField>
    <fullName>Projected_Taxes__c</fullName>
    <label>Projected Taxes</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>