SubBt/force-app/main/default/objects/Listings__c/fields/Road_LID__c.field-meta.xml
<CustomField>
    <fullName>Road_LID__c</fullName>
    <label>Road LID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>