SubBt/force-app/main/default/objects/Listings__c/fields/Sewer_LID__c.field-meta.xml
<CustomField>
    <fullName>Sewer_LID__c</fullName>
    <label>Sewer LID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>