SubBt/force-app/main/default/objects/Listings__c/fields/Showing_Instructions__c.field-meta.xml
<CustomField>
    <fullName>Showing_Instructions__c</fullName>
    <label>Showing Instructions</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>