SubBt/force-app/main/default/objects/Listings__c/fields/Size_Sqft__c.field-meta.xml
<CustomField>
    <fullName>Size_Sqft__c</fullName>
    <label>Size (Sqft)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>