SubBt/force-app/main/default/objects/Listings__c/fields/Utility_Info__c.field-meta.xml
<CustomField>
    <fullName>Utility_Info__c</fullName>
    <label>Utility Info</label>
    <length>255</length>
    <type>Text</type>
</CustomField>